Added .head and .tail to ElementHusker

--- a/tests/parser_tests/fixtures/comprehensive.html
+++ b/tests/parser_tests/fixtures/comprehensive.html
@@ -25,6 +25,11 @@
         <td>Drei</td>
       </tr>
     </table>
+    <section id="story">
+      It starts like this.
+      Then it gets <i>crazy</i> but then
+      it's all fine.
+    </section>
     <section id="discourse">
       <p id="one" num="1" class="discourse">It begins.</p>
       <p id="two" num="2" class="discourse greater-than-one">It runs.</p>
